--- a/水平居中/4.html
+++ b/水平居中/4.html
@@ -8,14 +8,15 @@
 			width:100px;
 			height:50px;
 			background: red;
-			text-align: center;
+			position: relative;
 		}
 		.child{
 			width:60px;
 			height:30px;
 			background: green;
-			display: inline-block;
-			
+			position: absolute;
+			left:50%;
+			transform: translateX(-50%);
 		}
 	</style>
 </head>
