--- a/水平居中/2.html
+++ b/水平居中/2.html
@@ -8,13 +8,13 @@
 			width:100px;
 			height:50px;
 			background: red;
-			text-align: center;
+			
 		}
 		.child{
 			width:60px;
 			height:30px;
 			background: green;
-			display: inline-block;
+			margin:0 auto;
 			
 		}
 	</style>
