--- a/一列定宽,一列自适应/一列定宽,一列自适应.html
+++ b/一列定宽,一列自适应/一列定宽,一列自适应.html
@@ -13,6 +13,11 @@
 			background: green;
 			margin-left:100px;
 		}
+		.bo{
+			background:blue;
+			width:100px;
+			
+		}
 	</style>
 </head>
 <body>
@@ -20,5 +25,6 @@
 		<div class="left">left</div>
 		<div class="right">right</div>
 	</div>
+	<div class="bo">xx</div>
 </body>
 </html>
