--- a/跨域/cors.html
+++ b/跨域/cors.html
@@ -9,6 +9,8 @@
 	    var xhr = new XMLHttpRequest();
 	    xhr.open("GET", "http://segmentfault.com/u/trigkit4/",true);
 	    xhr.send();
+
+	    服务器端对于CORS的支持，主要就是通过设置Access-Control-Allow-Origin来进行
 	</script>
 </body>
 </html>
